# competilens-ai

./: README.md
AI-Engine/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
AI-Engine/models/change-detection/: API_INTEGRATION.md  QUICKSTART.md  README.md  requirements.txt
AI-Engine/models/change-detection/benchmarks/: benchmark_runner.py
AI-Engine/models/change-detection/change_detection/: __init__.py
AI-Engine/models/change-detection/configs/: base.yaml  rules.yaml  scoring.yaml  thresholds.yaml
AI-Engine/models/change-detection/scripts/: example_features.py  example_pricing.py
AI-Engine/models/content-classifier/: README.md
AI-Engine/models/content-classifier/configs/: base.yaml  labels.json  train.yaml
AI-Engine/models/content-classifier/data/: README.md
AI-Engine/models/content-classifier/src/: __init__.py  clean_data.py  collect_data.py  dataset.py  deduplicate.py  evaluate.py  model.py  predict.py  split_data.py  tokenizer.py  train.py  validate_data.py
AI-Engine/models/content-classifier/tests/: test_inference.py  test_labels.py  test_preprocessing.py  test_training_dataset.py
AI-Engine/models/sentiment-intelligence/: README.md
AI-Engine/models/sentiment-intelligence/configs/: base.yaml  labels.json  train.yaml
AI-Engine/scripts/: run_content_classifier_pipeline.py
AI-Engine/src/api/: app.py  dependencies.py  main.py
AI-Engine/src/common/: config.py
AI-Engine/src/inference/: classifier_service.py  sentiment_service.py
AI-Engine/tests/: test_api.py  test_content_classifier_pipeline.py
Backend/: .env.example  (+6 more)
(+276 files in other folders)
